@@ -32,7 +32,7 @@
 <if:read_receipt>
     <div>
      <label>
-      <input name="request_read_receipt" type="checkbox" class="checkbox"<if:read_receipt_set> checked="checked"</if:read_receipt_set> /><gettext>Read Receipt</gettext>
+      <input id="request_read_receipt" name="request_read_receipt" type="checkbox" class="checkbox"<if:read_receipt_set> checked="checked"</if:read_receipt_set> /><gettext>Read Receipt</gettext>
      </label>
     </div>
 </if:read_receipt>
